[package]
name = "python"
version = "0.1.0"
authors = ["Dominik Miedziński <dominik@mdzn.pl>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
clap = "2.33.0"
fnv = "1.0.3"
num-bigint = "0.3"
python-syntax = { path = "../python-syntax" }

[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell"
rev = "1c5e323dc185310741dc9c52f78490505b5298c8"
features = ["llvm11-0"]
